# practice_syslog

./: Cargo.toml
config/: OPENSENSE copy.json  OPENSENSE.json  OPENSENSE_hash.json  flut.conf  flut.json  realtime_query.json
src/: config.rs  datastore.rs  db.rs  duration.rs  filter.rs  ingest.rs  log_event.rs  log_parser.rs  main.rs  parser.rs  pool.rs  query.rs  tcp_pool.rs
src/config/: OPENSENSE.conf  config.conf  flut.conf
